# mystiko-flutter

./: .flutter_rust_bridge.yaml  .gitignore  CHANGELOG.md  Cargo.toml  analysis_options.yaml  melos.yaml  pubspec.yaml
.github/workflow/: build.yml
.github/workflows/: build.yml  release.yml
android/: .gitignore  CMakeLists.txt  local.properties  settings.gradle
example/android/app/: build.gradle
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: main.cpp
lib/: mystiko_flutter.dart  mystiko_flutter_bindings_generated.dart
lib/src/: ffi.dart
lib/src/ffi/: io.dart  stub.dart
linux/: CMakeLists.txt
macos/: mystiko_flutter.podspec
scripts/: build-android.sh  build-apple.sh  build-other.sh  version.sh
src/: CMakeLists.txt  mystiko_flutter.c
windows/: CMakeLists.txt
